--- a/plugins-styles/src/lib/core/swatches.css
+++ b/plugins-styles/src/lib/core/swatches.css
@@ -51,6 +51,7 @@
     --warning-500: #fe4811;
     --warning-950: #440806;
     --error-50: #fff0f3;
+    --error-200: #ffcada;
     --error-500: #ff3277;
     --error-950: #500124;
     --info-50: #f0f8ff;
