--- a/plugins-styles/src/lib/styles.css
+++ b/plugins-styles/src/lib/styles.css
@@ -1,6 +1,11 @@
+/*core*/
+@import url("core/swatches.css");
+@import url("core/fonts.css");
+@import url("core/spacing.css");
+
 /*components*/
 @import url("components/button.css");
-
-/*core*/
-@import url("core/fonts.css");
-@import url("core/swatches.css");
+@import url("components/checkbox.css");
+@import url("components/radio-button.css");
+@import url("components/tabs.css");
+@import url("components/icon.css");
