--- a/apps/example-plugin/src/app/app.element.css
+++ b/apps/example-plugin/src/app/app.element.css
@@ -52,14 +52,11 @@ svg {
   width: 100%;
 }
 
-button {
-  padding: 0.5rem;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 10px;
+p {
+  margin-bottom: var(--spacing-12);
 }
 
 h1 {
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: var(--spacing-12);
 }
