--- a/libs/plugins-styles/src/lib/styles.css
+++ b/libs/plugins-styles/src/lib/styles.css
@@ -1,4 +1,5 @@
 /*core*/
+@import url("core/generic.css");
 @import url("core/swatches.css");
 @import url("core/fonts.css");
 @import url("core/spacing.css");
@@ -7,5 +8,6 @@
 @import url("components/button.css");
 @import url("components/checkbox.css");
 @import url("components/radio-button.css");
-@import url("components/tabs.css");
 @import url("components/icon.css");
+@import url("components/select.css");
+@import url("components/input.css");
