--- a/libs/plugins-styles/src/lib/core/swatches.css
+++ b/libs/plugins-styles/src/lib/core/swatches.css
@@ -53,6 +53,7 @@
     --error-50: #fff0f3;
     --error-200: #ffcada;
     --error-500: #ff3277;
+    --error-700: #c80857;
     --error-950: #500124;
     --info-50: #f0f8ff;
     --info-500: #0e9be9;
