feat: add theme support

--- a/apps/contrast-plugin/src/app/app.element.css
+++ b/apps/contrast-plugin/src/app/app.element.css
@@ -1,5 +1,11 @@
 .wrapper {
-  color: var(--app-white);
+  &[data-theme='dark'] {
+    color: var(--app-white);
+  }
+
+  &[data-theme='light'] {
+    color: var(--app-black);
+  }
 }
 
 .color {
