--- a/apps/icons-plugin/src/app/components/icon-button/icon-button.component.css
+++ b/apps/icons-plugin/src/app/components/icon-button/icon-button.component.css
@@ -1,16 +1,17 @@
 .icon-button {
-  padding: 0.25rem;
-  color: #000;
+  padding: var(--spacing-4);
   background: transparent;
-  border-radius: 0.5rem;
-  cursor: pointer;
+  border-radius: var(--spacing-8);
+  color: var(--app-black);
 
-  &:hover {
-    background: rgba(0, 0, 0, 0.1);
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--lb-tertiary);
   }
 
   &:focus,
   &:active {
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 0 2px var(--da-primary);
   }
 }
