--- a/apps/icons-plugin/src/app/app.component.css
+++ b/apps/icons-plugin/src/app/app.component.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  gap: 5px;
   overflow: hidden;
 
   .icons-search,
@@ -12,6 +11,7 @@
 
   .icons-search {
     padding-top: var(--spacing-20);
+    padding-bottom: var(--spacing-16);
   }
 
   .icons-list {
